--- a/projects/art_pi_bootloader/board/CubeMX_Config/CubeMX_Config.ioc
+++ b/projects/art_pi_bootloader/board/CubeMX_Config/CubeMX_Config.ioc
@@ -1,209 +1,115 @@
 #MicroXplorer Configuration settings - do not modify
+Appli.IPs=GPDMA1\:I,HPDMA1\:I,LINKEDLIST\:I,GPIO\:I,NVIC2\:I
+Boot.IPs=GPDMA1,HPDMA1,LINKEDLIST,RCC\:I,GPIO,NVIC1\:I,SYS\:I,CORTEX_M7\:I,FLASH\:I,UART4\:I,XSPI2\:I
+CAD.formats=
+CAD.pinconfig=
+CAD.provider=
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Show All
 KeepUserPlacement=false
+Mcu.CPN=STM32H7S7L8H6H
+Mcu.Context0=Boot
+Mcu.Context1=Appli
+Mcu.ContextNb=2
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
-Mcu.IP1=NVIC
-Mcu.IP2=QUADSPI
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=UART4
-Mcu.IPNb=6
-Mcu.Name=STM32H750XBHx
-Mcu.Package=TFBGA240
-Mcu.Pin0=PK5
-Mcu.Pin1=PK4
-Mcu.Pin10=PI12
-Mcu.Pin11=PI13
-Mcu.Pin12=PI14
-Mcu.Pin13=PK2
-Mcu.Pin14=PH1-OSC_OUT (PH1)
-Mcu.Pin15=PH0-OSC_IN (PH0)
-Mcu.Pin16=PK0
-Mcu.Pin17=PK1
-Mcu.Pin18=PF6
-Mcu.Pin19=PF7
-Mcu.Pin2=PG11
-Mcu.Pin20=PF8
-Mcu.Pin21=PJ11
-Mcu.Pin22=PF10
-Mcu.Pin23=PF9
-Mcu.Pin24=PJ10
-Mcu.Pin25=PJ9
-Mcu.Pin26=PA0
-Mcu.Pin27=PJ6
-Mcu.Pin28=PH5
-Mcu.Pin29=PI15
-Mcu.Pin3=PK6
-Mcu.Pin30=PJ5
-Mcu.Pin31=PA5
-Mcu.Pin32=PJ2
-Mcu.Pin33=PA4
-Mcu.Pin34=PJ3
-Mcu.Pin35=PJ4
-Mcu.Pin36=VP_SYS_VS_Systick
-Mcu.Pin4=PK3
-Mcu.Pin5=PG14
-Mcu.Pin6=PJ12
-Mcu.Pin7=PI9
-Mcu.Pin8=PJ13
-Mcu.Pin9=PG6
-Mcu.PinsNb=37
+Mcu.IP1=FLASH
+Mcu.IP2=NVIC2
+Mcu.IP3=NVIC1
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=UART4
+Mcu.IP7=XSPI2
+Mcu.IPNb=8
+Mcu.Name=STM32H7S7L8HxH
+Mcu.Package=TFBGA225 HEXA SMPS
+Mcu.Pin0=PD1
+Mcu.Pin1=PD0
+Mcu.Pin10=PH0-OSC_IN(PH0)
+Mcu.Pin11=PH1-OSC_OUT(PH1)
+Mcu.Pin12=PN8
+Mcu.Pin13=PN4
+Mcu.Pin14=PN5
+Mcu.Pin15=PN12
+Mcu.Pin16=VP_FLASH_SIG_Activate_FlashIP
+Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin18=VP_XSPI2_VS_octo
+Mcu.Pin2=PN1
+Mcu.Pin3=PN3
+Mcu.Pin4=PN0
+Mcu.Pin5=PN11
+Mcu.Pin6=PN10
+Mcu.Pin7=PN9
+Mcu.Pin8=PN2
+Mcu.Pin9=PN6
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
-Mcu.UserName=STM32H750XBHx
-MxCube.Version=6.0.0
-MxDb.Version=DB.6.0.0
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA0.Locked=true
-PA0.Mode=Asynchronous
-PA0.Signal=UART4_TX
-PA4.Locked=true
-PA4.Signal=SPI1_NSS
-PA5.Locked=true
-PA5.Signal=SPI1_SCK
-PF10.GPIOParameters=GPIO_Speed
-PF10.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PF10.Mode=Single Bank 1
-PF10.Signal=QUADSPI_CLK
-PF6.GPIOParameters=GPIO_Speed
-PF6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PF6.Mode=Single Bank 1
-PF6.Signal=QUADSPI_BK1_IO3
-PF7.GPIOParameters=GPIO_Speed
-PF7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PF7.Locked=true
-PF7.Mode=Single Bank 1
-PF7.Signal=QUADSPI_BK1_IO2
-PF8.GPIOParameters=GPIO_Speed
-PF8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PF8.Locked=true
-PF8.Mode=Single Bank 1
-PF8.Signal=QUADSPI_BK1_IO0
-PF9.GPIOParameters=GPIO_Speed
-PF9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PF9.Locked=true
-PF9.Mode=Single Bank 1
-PF9.Signal=QUADSPI_BK1_IO1
-PG11.GPIOParameters=GPIO_Speed
-PG11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PG11.Locked=true
-PG11.Signal=ETH_TX_EN
-PG14.GPIOParameters=GPIO_Speed
-PG14.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PG14.Locked=true
-PG14.Signal=ETH_TXD1
-PG6.GPIOParameters=GPIO_Speed
-PG6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PG6.Locked=true
-PG6.Mode=Single Bank 1
-PG6.Signal=QUADSPI_BK1_NCS
-PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
-PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
-PH1-OSC_OUT\ (PH1).Mode=HSE-External-Oscillator
-PH1-OSC_OUT\ (PH1).Signal=RCC_OSC_OUT
-PH5.GPIOParameters=GPIO_Speed_High_Default
-PH5.GPIO_Speed_High_Default=GPIO_SPEED_FREQ_VERY_HIGH
-PH5.Locked=true
-PH5.Signal=FMC_SDNWE
-PI12.GPIOParameters=GPIO_Speed
-PI12.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PI12.Locked=true
-PI12.Signal=LTDC_HSYNC
-PI13.GPIOParameters=GPIO_Speed
-PI13.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PI13.Locked=true
-PI13.Signal=LTDC_VSYNC
-PI14.GPIOParameters=GPIO_Speed
-PI14.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PI14.Locked=true
-PI14.Signal=LTDC_CLK
-PI15.GPIOParameters=GPIO_Speed
-PI15.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PI15.Locked=true
-PI15.Signal=LTDC_R0
-PI9.Locked=true
-PI9.Mode=Asynchronous
-PI9.Signal=UART4_RX
-PJ10.GPIOParameters=GPIO_Speed
-PJ10.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PJ10.Locked=true
-PJ10.Signal=LTDC_G3
-PJ11.GPIOParameters=GPIO_Speed
-PJ11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PJ11.Locked=true
-PJ11.Signal=LTDC_G4
-PJ12.GPIOParameters=GPIO_Speed
-PJ12.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PJ12.Locked=true
-PJ12.Signal=LTDC_B0
-PJ13.GPIOParameters=GPIO_Speed
-PJ13.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PJ13.Locked=true
-PJ13.Signal=LTDC_B1
-PJ2.GPIOParameters=GPIO_Speed
-PJ2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PJ2.Locked=true
-PJ2.Signal=LTDC_R3
-PJ3.GPIOParameters=GPIO_Speed
-PJ3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PJ3.Locked=true
-PJ3.Signal=LTDC_R4
-PJ4.GPIOParameters=GPIO_Speed
-PJ4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PJ4.Locked=true
-PJ4.Signal=LTDC_R5
-PJ5.GPIOParameters=GPIO_Speed
-PJ5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PJ5.Locked=true
-PJ5.Signal=LTDC_R6
-PJ6.GPIOParameters=GPIO_Speed
-PJ6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PJ6.Locked=true
-PJ6.Signal=LTDC_R7
-PJ9.GPIOParameters=GPIO_Speed
-PJ9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PJ9.Locked=true
-PJ9.Signal=LTDC_G2
-PK0.GPIOParameters=GPIO_Speed
-PK0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PK0.Locked=true
-PK0.Signal=LTDC_G5
-PK1.GPIOParameters=GPIO_Speed
-PK1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PK1.Locked=true
-PK1.Signal=LTDC_G6
-PK2.GPIOParameters=GPIO_Speed
-PK2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PK2.Locked=true
-PK2.Signal=LTDC_G7
-PK3.GPIOParameters=GPIO_Speed
-PK3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PK3.Locked=true
-PK3.Signal=LTDC_B4
-PK4.GPIOParameters=GPIO_Speed
-PK4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PK4.Locked=true
-PK4.Signal=LTDC_B5
-PK5.GPIOParameters=GPIO_Speed
-PK5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PK5.Locked=true
-PK5.Signal=LTDC_B6
-PK6.GPIOParameters=GPIO_Speed
-PK6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PK6.Locked=true
-PK6.Signal=LTDC_B7
+Mcu.UserName=STM32H7S7L8HxH
+MxCube.Version=6.99.23
+MxDb.Version=DB.6.0.100
+NVIC1.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC1.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC1.ForceEnableDMAVector=true
+NVIC1.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC1.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC1.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC1.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC1.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC1.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC1.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC1.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC2.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC2.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC2.ForceEnableDMAVector=true
+NVIC2.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC2.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC2.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC2.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC2.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC2.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC2.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC2.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PD0.GPIOParameters=PinAttribute
+PD0.Locked=true
+PD0.Mode=Asynchronous
+PD0.PinAttribute=Boot
+PD0.Signal=UART4_RX
+PD1.GPIOParameters=PinAttribute
+PD1.Locked=true
+PD1.Mode=Asynchronous
+PD1.PinAttribute=Boot
+PD1.Signal=UART4_TX
+PH0-OSC_IN(PH0).Locked=true
+PH0-OSC_IN(PH0).Mode=HSE-External-Oscillator
+PH0-OSC_IN(PH0).Signal=RCC_OSC_IN
+PH1-OSC_OUT(PH1).Locked=true
+PH1-OSC_OUT(PH1).Mode=HSE-External-Oscillator
+PH1-OSC_OUT(PH1).Signal=RCC_OSC_OUT
+PN0.Mode=XSPI2_Port2Octo
+PN0.Signal=XSPIM_P2_DQS0
+PN1.Mode=XSPI2_Port2Octo
+PN1.Signal=XSPIM_P2_NCS0
+PN10.Mode=XSPI2_Port2Octo
+PN10.Signal=XSPIM_P2_IO6
+PN11.Mode=XSPI2_Port2Octo
+PN11.Signal=XSPIM_P2_IO7
+PN12.Mode=XSPI2_Port2Octo
+PN12.Signal=XSPIM_P2_NCS1
+PN2.Mode=XSPI2_Port2Octo
+PN2.Signal=XSPIM_P2_IO0
+PN3.Mode=XSPI2_Port2Octo
+PN3.Signal=XSPIM_P2_IO1
+PN4.Mode=XSPI2_Port2Octo
+PN4.Signal=XSPIM_P2_IO2
+PN5.Mode=XSPI2_Port2Octo
+PN5.Signal=XSPIM_P2_IO3
+PN6.Mode=XSPI2_Port2Octo
+PN6.Signal=XSPIM_P2_CLK
+PN8.Mode=XSPI2_Port2Octo
+PN8.Signal=XSPIM_P2_IO4
+PN9.Mode=XSPI2_Port2Octo
+PN9.Signal=XSPIM_P2_IO5
 PinOutPanel.CurrentBGAView=Top
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -211,122 +117,120 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=
-ProjectManager.DefaultFWLocation=true
+ProjectManager.CustomerFirmwarePackage=D\:\\Packages\\STM32Cube\\Repository\\STM32Cube_FW_H7RS_V1.0.0RC1
+ProjectManager.DefaultFWLocation=false
 ProjectManager.DeletePrevious=true
-ProjectManager.DeviceId=STM32H750XBHx
-ProjectManager.FirmwarePackage=STM32Cube FW_H7 V1.8.0
+ProjectManager.DeviceId=STM32H7S7L8HxH
+ProjectManager.FirmwarePackage=STM32Cube FW_H7RS V0.3.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x200
+ProjectManager.HeapSize=App-0x200,EL-0x200,Boot-0x200
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
-ProjectManager.LibraryCopy=1
+ProjectManager.LibraryCopy=2
 ProjectManager.MainLocation=Core/Src
-ProjectManager.NoMain=false
+ProjectManager.NoMain=true
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=CubeMX_Config.ioc
 ProjectManager.ProjectName=CubeMX_Config
+ProjectManager.ProjectStructure=Boot\:Boot Project\:true;App\:Appli Project\:false;EL\:Eloader Project\:false;
 ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=MDK-ARM V5.27
+ProjectManager.StackSize=App-0x400,EL-0x400,Boot-0x400
+ProjectManager.TargetToolchain=MDK-ARM V5.37
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_UART4_Init-UART4-false-HAL-true,4-MX_QUADSPI_Init-QUADSPI-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false-Boot,2-MX_GPIO_Init-GPIO-false-HAL-true-Boot,3-MX_FLASH_Init-FLASH-false-HAL-true-Boot,4-MX_UART4_Init-UART4-false-HAL-true-Boot,5-MX_XSPI2_Init-XSPI2-false-HAL-true-Boot,1-SystemClock_Config-RCC-false-HAL-false-Appli,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-Boot,1-SystemClock_Config-RCC-false-HAL-false-Eloader
 RCC.ADCFreq_Value=200000000
-RCC.AHB12Freq_Value=240000000
-RCC.AHB4Freq_Value=240000000
-RCC.APB1Freq_Value=120000000
-RCC.APB2Freq_Value=120000000
-RCC.APB3Freq_Value=120000000
-RCC.APB4Freq_Value=120000000
-RCC.AXIClockFreq_Value=240000000
-RCC.CECFreq_Value=32000
+RCC.ADFFreq_Value=275000000
+RCC.AHB1234Freq_Value=275000000
+RCC.AHB5ClockFreq_Value=275000000
+RCC.APB1Freq_Value=137500000
+RCC.APB2Freq_Value=137500000
+RCC.APB4Freq_Value=137500000
+RCC.APB5Freq_Value=137500000
+RCC.AXIClockFreq_Value=275000000
+RCC.BMPRE=RCC_HCLK_DIV2
+RCC.CECFreq_Value=32768
 RCC.CKPERFreq_Value=64000000
-RCC.CortexFreq_Value=480000000
-RCC.CpuClockFreq_Value=480000000
-RCC.D1CPREFreq_Value=480000000
-RCC.D1PPRE=RCC_APB3_DIV2
-RCC.D2PPRE1=RCC_APB1_DIV2
-RCC.D2PPRE2=RCC_APB2_DIV2
-RCC.D3PPRE=RCC_APB4_DIV2
-RCC.DFSDMACLkFreq_Value=480000000
-RCC.DFSDMFreq_Value=120000000
-RCC.DIVM1=5
-RCC.DIVM2=2
-RCC.DIVM3=5
-RCC.DIVN1=192
-RCC.DIVN2=64
-RCC.DIVN3=160
-RCC.DIVP1Freq_Value=480000000
-RCC.DIVP2=4
+RCC.CPREFreq_Value=550000000
+RCC.CortexFreq_Value=550000000
+RCC.CpuClockFreq_Value=550000000
+RCC.DIVM2=4
+RCC.DIVN1=275
+RCC.DIVN2=25
+RCC.DIVP1=1
+RCC.DIVP1Freq_Value=550000000
 RCC.DIVP2Freq_Value=200000000
-RCC.DIVP3=8
-RCC.DIVP3Freq_Value=100000000
-RCC.DIVQ1Freq_Value=480000000
-RCC.DIVQ2Freq_Value=400000000
-RCC.DIVQ3=8
-RCC.DIVQ3Freq_Value=100000000
-RCC.DIVR1Freq_Value=480000000
-RCC.DIVR2=4
+RCC.DIVP3Freq_Value=128000000
+RCC.DIVQ1Freq_Value=275000000
+RCC.DIVQ2Freq_Value=200000000
+RCC.DIVQ3Freq_Value=128000000
+RCC.DIVR1Freq_Value=275000000
 RCC.DIVR2Freq_Value=200000000
-RCC.DIVR3=24
-RCC.DIVR3Freq_Value=33333333.333333332
-RCC.FDCANFreq_Value=480000000
-RCC.FMCCLockSelection=RCC_FMCCLKSOURCE_PLL2
-RCC.FMCFreq_Value=200000000
+RCC.DIVR3Freq_Value=128000000
+RCC.DIVS1Freq_Value=275000000
+RCC.DIVS2Freq_Value=200000000
+RCC.DIVS3Freq_Value=128000000
+RCC.DIVT1Freq_Value=275000000
+RCC.DIVT2Freq_Value=200000000
+RCC.DIVT3Freq_Value=128000000
+RCC.DTSFreq_Value=32768
+RCC.ETH1Freq_Value=25000000
+RCC.ETHPHYFreq_Value=25000000
+RCC.FDCANFreq_Value=25000000
+RCC.FMCFreq_Value=275000000
 RCC.FamilyName=M
-RCC.HCLK3ClockFreq_Value=240000000
-RCC.HCLKFreq_Value=240000000
-RCC.HPRE=RCC_HCLK_DIV2
-RCC.HRTIMFreq_Value=240000000
-RCC.I2C123Freq_Value=120000000
-RCC.I2C4Freq_Value=120000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2,DIVR2Freq_Value,DIVR3,DIVR3Freq_Value,FDCANFreq_Value,FMCCLockSelection,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMC1CLockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123CLockSelection,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Spi45ClockSelection,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
-RCC.LPTIM1Freq_Value=120000000
-RCC.LPTIM2Freq_Value=120000000
-RCC.LPTIM345Freq_Value=120000000
-RCC.LPUART1Freq_Value=120000000
-RCC.LTDCFreq_Value=33333333.333333332
+RCC.HCLKFreq_Value=275000000
+RCC.HSE_VALUE=25000000
+RCC.I2C1Freq_Value=137500000
+RCC.I2C23Freq_Value=137500000
+RCC.IPParameters=ADCFreq_Value,ADFFreq_Value,AHB1234Freq_Value,AHB5ClockFreq_Value,APB1Freq_Value,APB2Freq_Value,APB4Freq_Value,APB5Freq_Value,AXIClockFreq_Value,BMPRE,CECFreq_Value,CKPERFreq_Value,CPREFreq_Value,CortexFreq_Value,CpuClockFreq_Value,DIVM2,DIVN1,DIVN2,DIVP1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,DIVS1Freq_Value,DIVS2Freq_Value,DIVS3Freq_Value,DIVT1Freq_Value,DIVT2Freq_Value,DIVT3Freq_Value,DTSFreq_Value,ETH1Freq_Value,ETHPHYFreq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,I2C1Freq_Value,I2C23Freq_Value,LPTIM1Freq_Value,LPTIM23Freq_Value,LPTIM45Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,OSPI1Freq_Value,OSPI2Freq_Value,PLLFRACN,PPRE1,PPRE2,PPRE4,PPRE5,PSSIFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI1Freq_Value,SPI23Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TPIUFreq_Value,Tim1OutputFreq_Value,Tim2OutputFreq_Value,UCPDFreq_Value,USART1Freq_Value,USART234578Freq_Value,USBOFSFreq_Value,USBPHYFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,Xspi2ClockSelection
+RCC.LPTIM1Freq_Value=137500000
+RCC.LPTIM23Freq_Value=137500000
+RCC.LPTIM45Freq_Value=137500000
+RCC.LPUART1Freq_Value=137500000
+RCC.LTDCFreq_Value=128000000
 RCC.MCO1PinFreq_Value=64000000
-RCC.MCO2PinFreq_Value=480000000
-RCC.PLL2FRACN=0
+RCC.MCO2PinFreq_Value=550000000
+RCC.OSPI1Freq_Value=275000000
+RCC.OSPI2Freq_Value=200000000
 RCC.PLLFRACN=0
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.QSPIFreq_Value=240000000
-RCC.RNGFreq_Value=48000000
+RCC.PPRE1=RCC_APB1_DIV2
+RCC.PPRE2=RCC_APB2_DIV2
+RCC.PPRE4=RCC_APB4_DIV2
+RCC.PPRE5=RCC_APB5_DIV2
+RCC.PSSIFreq_Value=128000000
 RCC.RTCFreq_Value=32000
-RCC.SAI1Freq_Value=480000000
-RCC.SAI23Freq_Value=480000000
-RCC.SAI4AFreq_Value=480000000
-RCC.SAI4BFreq_Value=480000000
-RCC.SDMMC1CLockSelection=RCC_SDMMCCLKSOURCE_PLL2
+RCC.SAI1Freq_Value=275000000
+RCC.SAI2Freq_Value=275000000
 RCC.SDMMCFreq_Value=200000000
-RCC.SPDIFRXFreq_Value=480000000
-RCC.SPI123CLockSelection=RCC_SPI123CLKSOURCE_PLL2
-RCC.SPI123Freq_Value=200000000
-RCC.SPI45Freq_Value=100000000
-RCC.SPI6Freq_Value=120000000
-RCC.SWPMI1Freq_Value=120000000
-RCC.SYSCLKFreq_VALUE=480000000
+RCC.SPDIFRXFreq_Value=275000000
+RCC.SPI1Freq_Value=275000000
+RCC.SPI23Freq_Value=275000000
+RCC.SPI45Freq_Value=137500000
+RCC.SPI6Freq_Value=137500000
+RCC.SYSCLKFreq_VALUE=550000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.Spi45ClockSelection=RCC_SPI45CLKSOURCE_PLL3
-RCC.Tim1OutputFreq_Value=240000000
-RCC.Tim2OutputFreq_Value=240000000
-RCC.TraceFreq_Value=64000000
-RCC.USART16Freq_Value=120000000
-RCC.USART234578Freq_Value=120000000
-RCC.USBCLockSelection=RCC_USBCLKSOURCE_HSI48
-RCC.USBFreq_Value=48000000
-RCC.VCO1OutputFreq_Value=960000000
-RCC.VCO2OutputFreq_Value=800000000
-RCC.VCO3OutputFreq_Value=800000000
-RCC.VCOInput1Freq_Value=5000000
-RCC.VCOInput2Freq_Value=12500000
-RCC.VCOInput3Freq_Value=5000000
-SH.FMC_SDNWE.0=FMC_SDNWE
-SH.FMC_SDNWE.ConfNb=1
+RCC.TPIUFreq_Value=183333333.33333334
+RCC.Tim1OutputFreq_Value=275000000
+RCC.Tim2OutputFreq_Value=275000000
+RCC.UCPDFreq_Value=16000000
+RCC.USART1Freq_Value=137500000
+RCC.USART234578Freq_Value=137500000
+RCC.USBOFSFreq_Value=48000000
+RCC.USBPHYFreq_Value=25000000
+RCC.VCO1OutputFreq_Value=550000000
+RCC.VCO2OutputFreq_Value=400000000
+RCC.VCO3OutputFreq_Value=256000000
+RCC.VCOInput1Freq_Value=2000000
+RCC.VCOInput2Freq_Value=16000000
+RCC.VCOInput3Freq_Value=2000000
+RCC.Xspi2ClockSelection=RCC_XSPI2CLKSOURCE_PLL2S
+VP_FLASH_SIG_Activate_FlashIP.Mode=Activate_FlashIP
+VP_FLASH_SIG_Activate_FlashIP.Signal=FLASH_SIG_Activate_FlashIP
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_XSPI2_VS_octo.Mode=octo_mode
+VP_XSPI2_VS_octo.Signal=XSPI2_VS_octo
 board=custom
