[bluetooth][Templete] configs set bluetooth module works.

--- a/projects/art_pi_wifi/board/CubeMX_Config/CubeMX_Config.ioc
+++ b/projects/art_pi_wifi/board/CubeMX_Config/CubeMX_Config.ioc
@@ -7,7 +7,7 @@ ADC1.OffsetSign-0\#ChannelRegularConversion=ADC_OFFSET_SIGN_NEGATIVE
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.master=1
-Appli.IPs=CORTEX_M7_APPLI\:I,GPDMA1\:I,HPDMA1\:I,LINKEDLIST\:I,RCC\:I,GPIO,NVIC2\:I,UART4,SDMMC1,SDMMC2,FLASH,USB_OTG_FS,USB_OTG_HS,LTDC,GFXTIM,I2C2,I2C1,DCMIPP,DMA2D,JPEG,SAI1,SAI2,SPDIFRX,SPI1,SPI2,SPI3,SPI4,SPI5,SPI6,UART7,FDCAN1,FDCAN2,USART1
+Appli.IPs=CORTEX_M7_APPLI\:I,GPDMA1\:I,HPDMA1\:I,LINKEDLIST\:I,RCC\:I,GPIO,NVIC2\:I,UART4,SDMMC1,SDMMC2,FLASH,USB_OTG_FS,USB_OTG_HS,LTDC,GFXTIM,I2C2,I2C1,DCMIPP,DMA2D,JPEG,SAI1,SAI2,SPDIFRX,SPI1,SPI2,SPI3,SPI4,SPI5,SPI6,UART7,FDCAN1,FDCAN2,USART1,RTC,TAMP
 Boot.IPs=CORTEX_M7_BOOT\:I,GPDMA1,HPDMA1,LINKEDLIST,RCC,GPIO,NVIC1\:I,UART4,ADC1,MEMORYMAP\:I,XSPI1,XSPI2,USB_OTG_HS,DTS\:I,VREFBUF\:I
 CAD.formats=
 CAD.pinconfig=
@@ -16,7 +16,7 @@ CORTEX_M7_APPLI.IPParameters=default_mode_Activation
 CORTEX_M7_APPLI.default_mode_Activation=1
 CORTEX_M7_BOOT.IPParameters=default_mode_Activation
 CORTEX_M7_BOOT.default_mode_Activation=1
-ExtMemLoader.IPs=EXTMEM_LOADER\:I,EXTMEM_MANAGER\:I,GPIO\:I,UART4
+ExtMemLoader.IPs=EXTMEM_LOADER\:I,EXTMEM_MANAGER\:I,GPIO,UART4
 File.Version=6
 GPIO.groupedBy=
 I2C1.IPParameters=Timing
@@ -111,22 +111,23 @@ Mcu.IP1=CORTEX_M7_APPLI
 Mcu.IP10=NVIC2
 Mcu.IP11=NVIC1
 Mcu.IP12=RCC
-Mcu.IP13=SAI1
-Mcu.IP14=SAI2
-Mcu.IP15=SDMMC1
-Mcu.IP16=SDMMC2
-Mcu.IP17=SPI2
-Mcu.IP18=SPI4
-Mcu.IP19=SPI5
+Mcu.IP13=RTC
+Mcu.IP14=SAI1
+Mcu.IP15=SAI2
+Mcu.IP16=SDMMC1
+Mcu.IP17=SDMMC2
+Mcu.IP18=SPI2
+Mcu.IP19=SPI4
 Mcu.IP2=CORTEX_M7_BOOT
-Mcu.IP20=UART4
-Mcu.IP21=UART7
-Mcu.IP22=USART1
-Mcu.IP23=USB_OTG_FS
-Mcu.IP24=USB_OTG_HS
-Mcu.IP25=VREFBUF
-Mcu.IP26=XSPI1
-Mcu.IP27=XSPI2
+Mcu.IP20=SPI5
+Mcu.IP21=UART4
+Mcu.IP22=UART7
+Mcu.IP23=USART1
+Mcu.IP24=USB_OTG_FS
+Mcu.IP25=USB_OTG_HS
+Mcu.IP26=VREFBUF
+Mcu.IP27=XSPI1
+Mcu.IP28=XSPI2
 Mcu.IP3=DCMIPP
 Mcu.IP4=DTS
 Mcu.IP5=FLASH
@@ -134,7 +135,7 @@ Mcu.IP6=I2C1
 Mcu.IP7=I2C2
 Mcu.IP8=LTDC
 Mcu.IP9=MEMORYMAP
-Mcu.IPNb=28
+Mcu.IPNb=29
 Mcu.Name=STM32H7R7L8HxH
 Mcu.Package=TFBGA225 HEXA SMPS
 Mcu.Pin0=PE0
@@ -166,10 +167,11 @@ Mcu.Pin120=VP_ADC1_TempSens_Input
 Mcu.Pin121=VP_ADC1_Vref_Input
 Mcu.Pin122=VP_DTS_VS-DTS
 Mcu.Pin123=VP_FLASH_SIG_Activate_FlashIP
-Mcu.Pin124=VP_VREFBUF_V_VREFBUF
-Mcu.Pin125=VP_XSPI1_VS_hexa
-Mcu.Pin126=VP_XSPI2_VS_octo
-Mcu.Pin127=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin124=VP_RTC_VS_RTC_Activate
+Mcu.Pin125=VP_VREFBUF_V_VREFBUF
+Mcu.Pin126=VP_XSPI1_VS_hexa
+Mcu.Pin127=VP_XSPI2_VS_octo
+Mcu.Pin128=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin13=PM9
 Mcu.Pin14=PM5
 Mcu.Pin15=PG0
@@ -265,7 +267,7 @@ Mcu.Pin96=PP1
 Mcu.Pin97=PD12
 Mcu.Pin98=PB11
 Mcu.Pin99=PB13
-Mcu.PinsNb=128
+Mcu.PinsNb=129
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H7R7L8HxH
@@ -939,7 +941,7 @@ RCC.FamilyName=M
 RCC.HCLKFreq_Value=300000000
 RCC.I2C23Freq_Value=150000000
 RCC.I2CI3C1Freq_Value=150000000
-RCC.IPParameters=ADCFreq_Value,ADFFreq_Value,AHB1234Freq_Value,AHB5ClockFreq_Value,APB1Freq_Value,APB2Freq_Value,APB4Freq_Value,APB5Freq_Value,AXIClockFreq_Value,BMPRE,CECFreq_Value,CKPERFreq_Value,CPREFreq_Value,CortexFreq_Value,CpuClockFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3,DIVR3Freq_Value,DIVS1Freq_Value,DIVS2Freq_Value,DIVS3Freq_Value,DIVT1Freq_Value,DIVT2Freq_Value,DIVT3Freq_Value,DTSFreq_Value,ETH1Freq_Value,ETHPHYFreq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLKFreq_Value,I2C23Freq_Value,I2CI3C1Freq_Value,LPTIM1Freq_Value,LPTIM23Freq_Value,LPTIM45Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,OSPI1Freq_Value,OSPI2Freq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PPRE1,PPRE2,PPRE4,PPRE5,PSSIFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI1Freq_Value,SPI23Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TPIUFreq_Value,Tim1OutputFreq_Value,Tim2OutputFreq_Value,UCPDFreq_Value,USART1Freq_Value,USART234578Freq_Value,USBOFSFreq_Value,USBPHYFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,Xspi1ClockSelection,Xspi2ClockSelection
+RCC.IPParameters=ADCFreq_Value,ADFFreq_Value,AHB1234Freq_Value,AHB5ClockFreq_Value,APB1Freq_Value,APB2Freq_Value,APB4Freq_Value,APB5Freq_Value,AXIClockFreq_Value,BMPRE,CECFreq_Value,CKPERFreq_Value,CPREFreq_Value,CortexFreq_Value,CpuClockFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3,DIVR3Freq_Value,DIVS1Freq_Value,DIVS2Freq_Value,DIVS3Freq_Value,DIVT1Freq_Value,DIVT2Freq_Value,DIVT3Freq_Value,DTSFreq_Value,ETH1Freq_Value,ETHPHYFreq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLKFreq_Value,I2C23Freq_Value,I2CI3C1Freq_Value,LPTIM1Freq_Value,LPTIM23Freq_Value,LPTIM45Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,OSPI1Freq_Value,OSPI2Freq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PPRE1,PPRE2,PPRE4,PPRE5,PSSIFreq_Value,RTCClockSelection,RTCFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI1Freq_Value,SPI23Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TPIUFreq_Value,Tim1OutputFreq_Value,Tim2OutputFreq_Value,UCPDFreq_Value,USART1Freq_Value,USART234578Freq_Value,USBOFSFreq_Value,USBPHYFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,Xspi1ClockSelection,Xspi2ClockSelection
 RCC.LPTIM1Freq_Value=150000000
 RCC.LPTIM23Freq_Value=150000000
 RCC.LPTIM45Freq_Value=150000000
@@ -957,7 +959,8 @@ RCC.PPRE2=RCC_APB2_DIV2
 RCC.PPRE4=RCC_APB4_DIV2
 RCC.PPRE5=RCC_APB5_DIV2
 RCC.PSSIFreq_Value=400000000
-RCC.RTCFreq_Value=32000
+RCC.RTCClockSelection=RCC_RTCCLKSOURCE_LSE
+RCC.RTCFreq_Value=32768
 RCC.SAI1Freq_Value=300000000
 RCC.SAI2Freq_Value=300000000
 RCC.SDMMCFreq_Value=200000000
@@ -1037,6 +1040,8 @@ VP_FLASH_SIG_Activate_FlashIP.Mode=Activate_FlashIP
 VP_FLASH_SIG_Activate_FlashIP.Signal=FLASH_SIG_Activate_FlashIP
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_VREFBUF_V_VREFBUF.Mode=ExternalMode
 VP_VREFBUF_V_VREFBUF.Signal=VREFBUF_V_VREFBUF
 VP_XSPI1_VS_hexa.Mode=hyperbus16_mode
