--- a/projects/art_pi2_blink_touchgfx/board/CubeMX_Config/CubeMX_Config.ioc
+++ b/projects/art_pi2_blink_touchgfx/board/CubeMX_Config/CubeMX_Config.ioc
@@ -71,7 +71,7 @@ CORTEX_M7_BOOT.IPParameters=CPU_ICache,CPU_DCache
 DMA2D.ColorMode=DMA2D_OUTPUT_RGB888
 DMA2D.IPParameters=Mode,ColorMode
 DMA2D.Mode=DMA2D_R2M
-ExtMemLoader.IPs=EXTMEM_LOADER\:I,EXTMEM_MANAGER\:I,GPIO,UART4
+ExtMemLoader.IPs=EXTMEM_LOADER\:I,EXTMEM_MANAGER\:I,GPIO\:I,UART4
 FLASH.IPParameters=OB_User_Configuration1_active,OB_User_Configuration2_active,OB_IWDG1_SW_UI,OB_XSPI1_HSLV_UI,OB_XSPI2_HSLV_UI
 FLASH.OB_IWDG1_SW_UI=OB_IWDG_SW
 FLASH.OB_User_Configuration1_active=false
@@ -262,7 +262,7 @@ NVIC1.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC1.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC1.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC2.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC2.DMA2D_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC2.DMA2D_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:false
 NVIC2.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC2.ForceEnableDMAVector=true
 NVIC2.GPU2D_ER_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
@@ -270,7 +270,7 @@ NVIC2.GPU2D_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC2.HPDMA1_Channel0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC2.HPDMA1_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC2.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC2.JPEG_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true
+NVIC2.JPEG_IRQn=true\:8\:0\:true\:false\:true\:true\:true\:true
 NVIC2.LTDC_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:false
 NVIC2.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC2.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -630,7 +630,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false-Boot,2-MX_GPIO_Init-GPIO-false-HAL-true-Boot,3-MX_HPDMA1_Init-HPDMA1-false-HAL-true-Boot,4-MX_XSPI1_Init-XSPI1-false-HAL-true-Boot,5-MX_XSPI2_Init-XSPI2-false-HAL-true-Boot,6-MX_SBS_Init-SBS-false-HAL-true-Boot,7-MX_UART4_Init-UART4-false-HAL-true-Boot,1-SystemClock_Config-RCC-false-HAL-false-Appli,2-MX_GPIO_Init-GPIO-false-HAL-true-Appli,3-MX_HPDMA1_Init-HPDMA1-false-HAL-true-Appli,4-MX_LTDC_Init-LTDC-false-HAL-true-Appli,5-MX_CRC_Init-CRC-false-HAL-true-Appli,6-MX_DMA2D_Init-DMA2D-false-HAL-true-Appli,7-MX_JPEG_Init-JPEG-false-HAL-true-Appli,8-MX_FLASH_Init-FLASH-false-HAL-true-Appli,9-MX_I2C1_Init-I2C1-false-HAL-true-Appli,10-MX_GPU2D_Init-GPU2D-false-HAL-true-Appli,11-MX_ICACHE_GPU2D_Init-ICACHE_GPU2D-false-HAL-true-Appli,12-MX_GFXMMU_Init-GFXMMU-false-HAL-true-Appli,12-MX_UART4_Init-UART4-false-HAL-true-Appli,13-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.24.2_App-false-HAL-false-Appli,0-MX_CORTEX_M7_BOOT_Init-CORTEX_M7_BOOT-false-HAL-true-Boot,0-MX_CORTEX_M7_APPLI_Init-CORTEX_M7_APPLI-false-HAL-true-Appli,14-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.24.2_App-false-HAL-false-Appli,1-SystemClock_Config-RCC-false-HAL-false-ExtMemLoader,2-MX_GPIO_Init-GPIO-false-HAL-true-ExtMemLoader,3-MX_UART4_Init-UART4-false-HAL-true-ExtMemLoader
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false-Boot,2-MX_GPIO_Init-GPIO-false-HAL-true-Boot,3-MX_HPDMA1_Init-HPDMA1-false-HAL-true-Boot,4-MX_XSPI1_Init-XSPI1-false-HAL-true-Boot,5-MX_XSPI2_Init-XSPI2-false-HAL-true-Boot,6-MX_SBS_Init-SBS-false-HAL-true-Boot,7-MX_UART4_Init-UART4-false-HAL-true-Boot,1-SystemClock_Config-RCC-false-HAL-false-Appli,2-MX_GPIO_Init-GPIO-false-HAL-true-Appli,3-MX_HPDMA1_Init-HPDMA1-false-HAL-true-Appli,4-MX_LTDC_Init-LTDC-false-HAL-true-Appli,5-MX_CRC_Init-CRC-false-HAL-true-Appli,6-MX_DMA2D_Init-DMA2D-false-HAL-true-Appli,7-MX_JPEG_Init-JPEG-false-HAL-true-Appli,8-MX_FLASH_Init-FLASH-false-HAL-true-Appli,9-MX_I2C1_Init-I2C1-false-HAL-true-Appli,10-MX_GPU2D_Init-GPU2D-false-HAL-true-Appli,11-MX_ICACHE_GPU2D_Init-ICACHE_GPU2D-false-HAL-true-Appli,12-MX_UART4_Init-UART4-false-HAL-true-Appli,13-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.24.2_App-false-HAL-false-Appli,0-MX_CORTEX_M7_BOOT_Init-CORTEX_M7_BOOT-false-HAL-true-Boot,0-MX_CORTEX_M7_APPLI_Init-CORTEX_M7_APPLI-false-HAL-true-Appli,14-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.24.2_App-false-HAL-false-Appli,1-SystemClock_Config-RCC-false-HAL-false-ExtMemLoader,2-MX_GPIO_Init-GPIO-false-HAL-true-ExtMemLoader,3-MX_UART4_Init-UART4-false-HAL-true-ExtMemLoader
 RCC.ADCFreq_Value=200000000
 RCC.ADFFreq_Value=300000000
 RCC.AHB1234Freq_Value=300000000
