--- a/projects/art_pi2_wifi/board/CubeMX_Config/CubeMX_Config.ioc
+++ b/projects/art_pi2_wifi/board/CubeMX_Config/CubeMX_Config.ioc
@@ -12,11 +12,50 @@ Boot.IPs=CORTEX_M7_BOOT\:I,GPDMA1,HPDMA1,LINKEDLIST,RCC,GPIO,NVIC1\:I,UART4,ADC1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-CORTEX_M7_APPLI.IPParameters=default_mode_Activation
+CORTEX_M7_APPLI.AccessPermission_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_REGION_FULL_ACCESS
+CORTEX_M7_APPLI.AccessPermission_S-Cortex_Memory_Protection_Unit_Region2_Settings_S=MPU_REGION_FULL_ACCESS
+CORTEX_M7_APPLI.AccessPermission_S-Cortex_Memory_Protection_Unit_Region3_Settings_S=MPU_REGION_FULL_ACCESS
+CORTEX_M7_APPLI.AccessPermission_S-Cortex_Memory_Protection_Unit_Region4_Settings_S=MPU_REGION_FULL_ACCESS
+CORTEX_M7_APPLI.AccessPermission_S-Cortex_Memory_Protection_Unit_Region5_Settings_S=MPU_REGION_FULL_ACCESS
+CORTEX_M7_APPLI.AccessPermission_Spec=MPU_REGION_NO_ACCESS
+CORTEX_M7_APPLI.BaseAddress_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=0x70000000
+CORTEX_M7_APPLI.BaseAddress_S-Cortex_Memory_Protection_Unit_Region2_Settings_S=0x90000000
+CORTEX_M7_APPLI.BaseAddress_S-Cortex_Memory_Protection_Unit_Region3_Settings_S=0x20000000
+CORTEX_M7_APPLI.BaseAddress_S-Cortex_Memory_Protection_Unit_Region4_Settings_S=0x24000000
+CORTEX_M7_APPLI.BaseAddress_S-Cortex_Memory_Protection_Unit_Region5_Settings_S=0x30000000
+CORTEX_M7_APPLI.CPU_DCache=Enabled
+CORTEX_M7_APPLI.CPU_ICache=Enabled
+CORTEX_M7_APPLI.DisableExec_S-Cortex_Memory_Protection_Unit_Region2_Settings_S=MPU_INSTRUCTION_ACCESS_DISABLE
+CORTEX_M7_APPLI.DisableExec_S-Cortex_Memory_Protection_Unit_Region3_Settings_S=MPU_INSTRUCTION_ACCESS_DISABLE
+CORTEX_M7_APPLI.DisableExec_S-Cortex_Memory_Protection_Unit_Region4_Settings_S=MPU_INSTRUCTION_ACCESS_ENABLE
+CORTEX_M7_APPLI.Enable_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_REGION_ENABLE
+CORTEX_M7_APPLI.Enable_S-Cortex_Memory_Protection_Unit_Region2_Settings_S=MPU_REGION_ENABLE
+CORTEX_M7_APPLI.Enable_S-Cortex_Memory_Protection_Unit_Region3_Settings_S=MPU_REGION_ENABLE
+CORTEX_M7_APPLI.Enable_S-Cortex_Memory_Protection_Unit_Region4_Settings_S=MPU_REGION_ENABLE
+CORTEX_M7_APPLI.Enable_S-Cortex_Memory_Protection_Unit_Region5_Settings_S=MPU_REGION_ENABLE
+CORTEX_M7_APPLI.IPParameters=default_mode_Activation,CPU_ICache,CPU_DCache,Enable_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,BaseAddress_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,Size_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,TypeExtField_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,AccessPermission_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,AccessPermission_Spec,IsShareable_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,IsCacheable_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,IsBufferable_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,Enable_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,BaseAddress_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,Size_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,TypeExtField_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,AccessPermission_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,DisableExec_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,Enable_S-Cortex_Memory_Protection_Unit_Region3_Settings_S,BaseAddress_S-Cortex_Memory_Protection_Unit_Region3_Settings_S,Size_S-Cortex_Memory_Protection_Unit_Region3_Settings_S,TypeExtField_S-Cortex_Memory_Protection_Unit_Region3_Settings_S,AccessPermission_S-Cortex_Memory_Protection_Unit_Region3_Settings_S,DisableExec_S-Cortex_Memory_Protection_Unit_Region3_Settings_S,Enable_S-Cortex_Memory_Protection_Unit_Region4_Settings_S,BaseAddress_S-Cortex_Memory_Protection_Unit_Region4_Settings_S,Size_S-Cortex_Memory_Protection_Unit_Region4_Settings_S,TypeExtField_S-Cortex_Memory_Protection_Unit_Region4_Settings_S,AccessPermission_S-Cortex_Memory_Protection_Unit_Region4_Settings_S,IsCacheable_S-Cortex_Memory_Protection_Unit_Region4_Settings_S,IsShareable_S-Cortex_Memory_Protection_Unit_Region4_Settings_S,IsBufferable_S-Cortex_Memory_Protection_Unit_Region4_Settings_S,DisableExec_S-Cortex_Memory_Protection_Unit_Region4_Settings_S,Enable_S-Cortex_Memory_Protection_Unit_Region5_Settings_S,BaseAddress_S-Cortex_Memory_Protection_Unit_Region5_Settings_S,Size_S-Cortex_Memory_Protection_Unit_Region5_Settings_S,TypeExtField_S-Cortex_Memory_Protection_Unit_Region5_Settings_S,AccessPermission_S-Cortex_Memory_Protection_Unit_Region5_Settings_S,IsCacheable_S-Cortex_Memory_Protection_Unit_Region5_Settings_S,IsBufferable_S-Cortex_Memory_Protection_Unit_Region5_Settings_S
+CORTEX_M7_APPLI.IsBufferable_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_ACCESS_BUFFERABLE
+CORTEX_M7_APPLI.IsBufferable_S-Cortex_Memory_Protection_Unit_Region4_Settings_S=MPU_ACCESS_BUFFERABLE
+CORTEX_M7_APPLI.IsBufferable_S-Cortex_Memory_Protection_Unit_Region5_Settings_S=MPU_ACCESS_NOT_BUFFERABLE
+CORTEX_M7_APPLI.IsCacheable_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_ACCESS_CACHEABLE
+CORTEX_M7_APPLI.IsCacheable_S-Cortex_Memory_Protection_Unit_Region4_Settings_S=MPU_ACCESS_CACHEABLE
+CORTEX_M7_APPLI.IsCacheable_S-Cortex_Memory_Protection_Unit_Region5_Settings_S=MPU_ACCESS_CACHEABLE
+CORTEX_M7_APPLI.IsShareable_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_ACCESS_NOT_SHAREABLE
+CORTEX_M7_APPLI.IsShareable_S-Cortex_Memory_Protection_Unit_Region4_Settings_S=MPU_ACCESS_SHAREABLE
+CORTEX_M7_APPLI.Size_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_REGION_SIZE_64MB
+CORTEX_M7_APPLI.Size_S-Cortex_Memory_Protection_Unit_Region2_Settings_S=MPU_REGION_SIZE_32MB
+CORTEX_M7_APPLI.Size_S-Cortex_Memory_Protection_Unit_Region3_Settings_S=MPU_REGION_SIZE_64KB
+CORTEX_M7_APPLI.Size_S-Cortex_Memory_Protection_Unit_Region4_Settings_S=MPU_REGION_SIZE_512KB
+CORTEX_M7_APPLI.Size_S-Cortex_Memory_Protection_Unit_Region5_Settings_S=MPU_REGION_SIZE_32KB
+CORTEX_M7_APPLI.TypeExtField_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_TEX_LEVEL1
+CORTEX_M7_APPLI.TypeExtField_S-Cortex_Memory_Protection_Unit_Region2_Settings_S=MPU_TEX_LEVEL1
+CORTEX_M7_APPLI.TypeExtField_S-Cortex_Memory_Protection_Unit_Region3_Settings_S=MPU_TEX_LEVEL1
+CORTEX_M7_APPLI.TypeExtField_S-Cortex_Memory_Protection_Unit_Region4_Settings_S=MPU_TEX_LEVEL1
+CORTEX_M7_APPLI.TypeExtField_S-Cortex_Memory_Protection_Unit_Region5_Settings_S=MPU_TEX_LEVEL1
 CORTEX_M7_APPLI.default_mode_Activation=1
 CORTEX_M7_BOOT.IPParameters=default_mode_Activation
 CORTEX_M7_BOOT.default_mode_Activation=1
-ExtMemLoader.IPs=EXTMEM_LOADER\:I,EXTMEM_MANAGER\:I,GPIO\:I,UART4
+ExtMemLoader.IPs=EXTMEM_LOADER\:I,EXTMEM_MANAGER\:I,GPIO,UART4
 File.Version=6
 GPIO.groupedBy=
 I2C1.IPParameters=Timing
@@ -269,8 +308,8 @@ Mcu.PinsNb=128
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H7R7L8HxH
-MxCube.Version=6.12.0
-MxDb.Version=DB.6.0.120
+MxCube.Version=6.13.0
+MxDb.Version=DB.6.0.130
 NVIC1.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC1.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC1.ForceEnableDMAVector=true
@@ -931,7 +970,7 @@ RCC.DIVT1Freq_Value=300000000
 RCC.DIVT2Freq_Value=200000000
 RCC.DIVT3Freq_Value=200000000
 RCC.DTSFreq_Value=32768
-RCC.ETH1Freq_Value=24000000
+RCC.ETH1Freq_Value=12288000
 RCC.ETHPHYFreq_Value=24000000
 RCC.FDCANFreq_Value=24000000
 RCC.FMCFreq_Value=300000000
@@ -1021,8 +1060,9 @@ SPI5.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,BaudRa
 SPI5.Mode=SPI_MODE_MASTER
 SPI5.VirtualNSS=VM_NSSHARD
 SPI5.VirtualType=VM_MASTER
-USART1.IPParameters=VirtualMode
+USART1.IPParameters=VirtualMode,VirtualMode-Asynchronous
 USART1.VirtualMode=VM_ASYNC
+USART1.VirtualMode-Asynchronous=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 USB_OTG_HS.IPParameters=VirtualMode
